fixing spacing

--- a/static/styles/create-question.css
+++ b/static/styles/create-question.css
@@ -1,6 +1,5 @@
 .form textarea {
   /*make text input box bigger vertically*/
-  padding: 40px;
   width: 50%;
 }
 
